# UO_MDR

./: .gitignore  Adoption_Standard_Update.py  BACKUP_RESTORE.md  DEPLOY_BACKUP_RESTORE.md  ENVIRONMENT.md  OPERATIONS.md  SYSTEM_ARCHITECTURE.md  SYSTEM_DEPLOYMENT.md  SYSTEM_ENVIRONMENT.md  THIRD_PARTY_SOFTWARE.md  app.py  db_deploy.md  deploy.sh  docker-compose.yml  dockerfile  index.html  install.md  login_app.py  mapping_file.xlsx  pyproject.toml  requirements.txt  流程備份還原說明文件.md
app/: __init__.py  config.py  extensions.py  logging_config.py  utils.py
deploy/: nginx-site.conf.template  nginx.conf.template
docs/: system-description.md  user-operation-manual.md
migrations/: env.py
modules/: Edit_Word.py  Extract_AllFile_to_FinalWord.py  __init__.py  auth_models.py  chapter_boundary_llm.py  chapter_section_parse.py  docx_merger.py  docx_provenance.py  docx_toc.py  env_loader.py  extract_pdf_img.py  extract_specific_figure_xml.py  extract_specific_table_xml.py  extract_word_all_content.py  extract_word_chapter.py  file_copier.py  file_mover.py  mapping_parser.py  mapping_processor.py  mssql_timeout.py  nas_models.py  postprocess.py  rbac_store.py  settings_models.py  task_models.py  template_manager.py  template_mapping.py  translate_with_bedrock.py  workflow.py
scripts/: backup.sh  backup_mssql_full.sh  extract_docx_toc.py  install_nginx_site.sh  install_noto_cjk_fonts.sh  install_systemd_units.sh  mssql_url_to_sqlcmd_env.py  restore_files.sh  restore_mssql_replace.sh
static/: admin-custom.css  file-tree.css  file-tree.js  responsive-fixes.css  ui-utils.js
templates/: admin_users.html  base.html  compare.html  copy_files.html  flow.html  index.html  login.html  (+6 more)
(+246 files in other folders)
