[project]
name = "UOC_Regulations"
version = "0.1.0"
description = "UOC_Regulations uv python env"
requires-python = "==3.11.4"

dependencies = [
    "Flask==3.0.2",
    "Werkzeug==3.0.1",
    "SQLAlchemy>=2.0",
    "pyodbc>=4.0",
    "python-dotenv>=1.0",
    "python-docx==1.1.2",
    "PyMuPDF==1.24.8",
    "spire.doc==12.1.0",
    "docxcompose==1.4.0",
    "docxtpl==0.16.7",
    "boto3",
    "openpyxl==3.1.2",
    "gunicorn>=23.0.0",
]

[tool.uv]
