[project]
name = "UOC_Regulations"
version = "0.1.0"
description = "UOC_Regulations uv python env"
requires-python = "==3.11.4"

dependencies = [
    "Flask==3.0.2",
    "Werkzeug==3.0.1",
    "Flask-Admin>=1.6.1",
    "flask-ldap3-login>=0.9.0",
    "Flask-Login>=0.6.3",
    "Flask-SQLAlchemy>=3.1.1",
    "SQLAlchemy>=2.0",
    "pyodbc>=4.0",
    "python-dotenv>=1.0",
    "python-docx==1.1.2",
    "PyMuPDF==1.24.8",
    "spire.doc==12.1.0",
    "docxcompose==1.4.0",
    "docxtpl==0.16.7",
    "boto3",
    "openpyxl==3.1.2",
    "gunicorn>=23.0.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-flask>=1.3.0",
    "pytest-sqlalchemy>=0.3.0",
    "setuptools>=82.0.0",
]

[tool.uv]
